--- a/Exercise 4/styles.css
+++ b/Exercise 4/styles.css
@@ -14,21 +14,25 @@
   width: 50px !important;
 }
 
-.arrayClass1 {
-  background-color: pink;
-  width: 500px;
+.blue {
+  background-color: blue;
 }
 
-.arrayClass2 {
-  height: 100px;
-  border-style: solid;
-  border-color: black;
+.float {
+  float: right;
 }
 
-.classExample {
-  background-color: green;
-  border-color: blueviolet;
-  border-style: solid;
-  width: 500px;
-  height: 100px;
+.text-color {
+  color: yellow;
+}
+
+.visible {
+  width: 100px;
+  height: 50px;
+}
+
+.progressBar {
+  width: 200px;
+  height: 20px;
+  border: 1px solid black;
 }
